--- a/ResoniteMediaReporter/ResoniteMediaReporter.csproj
+++ b/ResoniteMediaReporter/ResoniteMediaReporter.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NetCoreServer" Version="6.7.0" />
+    <PackageReference Include="NetCoreServer" Version="8.0.7" />
+    <PackageReference Include="System.Text.Json" Version="9.0.4" />
   </ItemGroup>
 
 </Project>
