--- a/ResoniteMediaReporter.csproj
+++ b/ResoniteMediaReporter.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+  <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.0" />
     <PackageReference Include="NetCoreServer" Version="8.0.7" />
     <PackageReference Include="System.Text.Json" Version="9.0.4" />
   </ItemGroup>
